--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Deteksi Gesture Tangan</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/hand-pose-detection" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-converter"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/hand-pose-detection"></script>
   <style>
-    body { text-align: center; background: #111; color: white; margin:0; overflow:hidden; }
-    canvas { position: absolute; left: 50%; transform: translateX(-50%); top:0; }
+    body { text-align: center; background: #111; color: white; }
+    canvas { position: absolute; left: 50%; transform: translateX(-50%); }
     #output { margin-top: 480px; font-size: 28px; font-weight: bold; }
-    #startBtn { margin-top:20px; padding:10px 20px; font-size:18px; }
   </style>
 </head>
 <body>
   <h2>Vall Sign</h2>
-  <button id="startBtn">Izinkan Kamera</button>
   <video id="video" autoplay playsinline style="display:none;"></video>
   <canvas id="canvas"></canvas>
   <div id="output">Deteksi...</div>
@@ -27,7 +25,6 @@
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     const output = document.getElementById("output");
-    const startBtn = document.getElementById("startBtn");
 
     // mapping gesture
     const gestureMap = {
@@ -41,18 +38,13 @@
     let lastGesture = "";
     let lastSpokenTime = 0;
 
-    // aktifkan kamera dengan izin
+    // aktifkan kamera
     async function setupCamera() {
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        video.srcObject = stream;
-        return new Promise((resolve) => {
-          video.onloadedmetadata = () => resolve(video);
-        });
-      } catch (err) {
-        alert("Izin kamera ditolak atau tidak tersedia.");
-        console.error(err);
-      }
+      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+      video.srcObject = stream;
+      return new Promise((resolve) => {
+        video.onloadedmetadata = () => resolve(video);
+      });
     }
 
     // hitung jari terbuka
@@ -79,6 +71,7 @@
     }
 
     function drawHand(landmarks) {
+      // titik
       ctx.fillStyle = "lime";
       for (let p of landmarks) {
         ctx.beginPath();
@@ -86,13 +79,14 @@
         ctx.fill();
       }
 
+      // garis antar sendi (skeletal)
       const connections = [
-        [0,1],[1,2],[2,3],[3,4],
-        [0,5],[5,6],[6,7],[7,8],
-        [5,9],[9,10],[10,11],[11,12],
-        [9,13],[13,14],[14,15],[15,16],
-        [13,17],[17,18],[18,19],[19,20],
-        [0,17]
+        [0,1],[1,2],[2,3],[3,4],      // jempol
+        [0,5],[5,6],[6,7],[7,8],      // telunjuk
+        [5,9],[9,10],[10,11],[11,12], // tengah
+        [9,13],[13,14],[14,15],[15,16], // manis
+        [13,17],[17,18],[18,19],[19,20], // kelingking
+        [0,17] // telapak bawah
       ];
       ctx.strokeStyle = "cyan";
       ctx.lineWidth = 2;
@@ -145,10 +139,7 @@
       render();
     }
 
-    startBtn.addEventListener("click", () => {
-      startBtn.style.display = "none";
-      main();
-    });
+    main();
   </script>
 </body>
 </html>
